--- a/css/contents.css
+++ b/css/contents.css
@@ -1,11 +1,11 @@
 @CHARSET "UTF-8";
 
-h1 {
+h3 {
 	border-bottom:2px solid #fff !important;	
 	padding-bottom:10px !important;
 }
 
-.list-group-item {
+#list .list-group-item {
 	color:#fff !important;
 }
 
