--- a/css/common.css
+++ b/css/common.css
@@ -79,8 +79,9 @@ body {
     display: block;
     padding-top: 20px;
     padding-bottom: 20px;
+    padding:12px 0px;
     background-color: #000;
-    margin-top: -45px;
+    margin-top: -43px;
     z-index: 1;
     position: relative;
     opacity: .8;
