--- a/css/common.css
+++ b/css/common.css
@@ -90,3 +90,11 @@ body {
     float: right;
 }
 
+.srt {
+	position:absolute;
+	float:left;
+    width:640px;
+    min-height:370px;
+    background-color:#000;
+    z-index:300000;
+}
