--- a/css/common.css
+++ b/css/common.css
@@ -92,8 +92,18 @@ body {
 
 .srt {
 	position:absolute;
-	/* float:left;
-    background-color:#000; */
     z-index:300000;
     text-align:center;
+}
+
+video::-webkit-media-text-track-container {
+	display:none;
+}
+
+video::-webkit-media-text-track-background {
+	display:none;
+}
+
+video::-webkit-media-text-track-display {
+	display:none;
 }
