--- a/css/common.css
+++ b/css/common.css
@@ -92,7 +92,7 @@ body {
 
 .srt {
 	position:absolute;
-    z-index:2147483647;
+    z-index:2147483647 !important;
     text-align:center;
     
 }
