--- a/css/common.css
+++ b/css/common.css
@@ -91,24 +91,21 @@ body {
 }
 
 .srt {
-	position:absolute;
-    z-index:2147483647 !important;
-    text-align:center;
-    
+	position: absolute;
+	z-index: 2147483647 !important;
+	text-align: center;
+	position: absolute;
+	top: 100px;
+	color: #FFF;
+	text-align: center;
+	font-size: 20px;
+	background-color: rgba(221, 221, 221, 0.3);
+	width: 640px;
+	padding: 10px 0;
+	z-index: 2147483647;
 }
 
 #video video {
 	z-index:1;
 }
 
-video::-webkit-media-text-track-container {
-	display:none;
-}
-
-video::-webkit-media-text-track-background {
-	display:none;
-}
-
-video::-webkit-media-text-track-display {
-	display:none;
-}
