--- a/css/common.css
+++ b/css/common.css
@@ -107,6 +107,13 @@ body {
 	z-index:1 !important;
 }
 
+.fullscreen {
+	position:absolute !important;
+	top:0;
+	left:0;
+	width:100% !important;
+}
+
 video::-webkit-media-controls-fullscreen-button {
     display: none;
 }
