--- a/css/common.css
+++ b/css/common.css
@@ -108,7 +108,7 @@ body {
 }
 
 .fullscreen {
-	position:absolute !important;
+	position:fixed !important;
 	top:0;
 	left:0;
 	width:100% !important;
