--- a/css/common.css
+++ b/css/common.css
@@ -110,6 +110,7 @@ body {
 	height:100% !important;
 	background-color:#000;
 	z-index:1040;
+	flex: 1 1 0% !important;
 }	
 
 video::-webkit-media-controls-fullscreen-button {
