--- a/css/common.css
+++ b/css/common.css
@@ -111,6 +111,7 @@ body {
 	background-color:#000;
 	z-index:1040;
 	flex: 1 1 0% !important;
+	object-fit: contain;
 }	
 
 video::-webkit-media-controls-fullscreen-button {
