--- a/css/common.css
+++ b/css/common.css
@@ -104,7 +104,7 @@ body {
 }	
 
 video::-webkit-media-controls-fullscreen-button {
-    /* display: none; */
+    display: none;
 }
 video::-webkit-media-controls-play-button {}
 video::-webkit-media-controls-timeline {}
