--- a/css/common.css
+++ b/css/common.css
@@ -96,12 +96,17 @@ body {
 	background-color:#000;
 }
 
-.srt {
+.srt_wrap {
 	z-index: 2147483647 !important;
 	position:absolute;
 	width:100%;
 	text-align:center;
 	padding:0px 10px;
+	opacity:0.1;
+}
+
+.srt {
+	opacity:1.0 !important;
 }
 
 .fullscreen {
