--- a/css/common.css
+++ b/css/common.css
@@ -119,6 +119,14 @@ body {
 #videoControll button {
 }
 
+#videoControll .vLeft {
+	
+}
+
+#videoControll .vRight {
+	float:right;	
+}
+
 video::-webkit-media-controls-fullscreen-button {
     display: none;
 }
