--- a/css/common.css
+++ b/css/common.css
@@ -108,11 +108,11 @@ body {
 	width:100% !important;
 }	
 
-#contoller span button {
+#contoll span button {
 	margin-right:5px;
 }
 
-#controller .float-right {
+#controll .float-right {
 	margin-left:5px;
 }
 
