--- a/css/common.css
+++ b/css/common.css
@@ -108,11 +108,11 @@ body {
 	width:100% !important;
 }	
 
-#contoll span button {
+#controll span button {
 	margin-right:5px;
 }
 
-#controll .float-right {
+#controll .float-right button {
 	margin-left:5px;
 }
 
