--- a/css/common.css
+++ b/css/common.css
@@ -128,7 +128,7 @@ body {
 	margin-right:5px;
 }
 
-#videoControll .vLeft button.active {
+#controll span button.active {
 	color: #33F !important;
 }
 
